# ray-tracing

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  vcpkg.json
rtcli/: Cargo.toml  README.md
rtcli/src/: camera.rs  main.rs  material.rs
rtcli/src/object/: mod.rs  world.rs
rtcli/src/scenes/: large_scene.rs  ray_background.rs  ray_sphere.rs  spectrum.rs  surface_normals.rs
rtcli/src/utils/: interval.rs  mod.rs  rng.rs
rtui/: Cargo.toml  rust-toolchain
rtui/src/: app.rs  buf.rs  custom3d_wgpu_shader.wgsl  lib.rs  main.rs
src/: camera.rs  error.rs  interval.rs  main.cpp  main.rs  math.rs  prelude.rs  ray.rs  vec3.rs
src/object/: mod.rs  sphere.rs
src/scenes/: mod.rs  moveable_camera.rs  ray_sphere.rs  spectrum.rs  surface_normals.rs
src/utils/: math.rs
